Updates frontend display
- Refactors various components to update display layout
- Adds new fonts
- Fixes bug where detections would be repeatedly counted; now stores check if a given tracking ID has already been recorded. If yes, the count will not be updated- this makes stats more accurate

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1,1 +1,35 @@
 @import "tailwindcss";
+
+@theme {
+    --font-orbit: "Orbit";
+    --font-tektur: "Tektur";
+}
+
+/* Custom Scrollbar Utilities */
+@layer utilities {
+  /* Chrome, Edge, Safari */
+  .detections-scroll::-webkit-scrollbar {
+    height: 6px;
+    width: 6px;
+  }
+
+  .detections-scroll::-webkit-scrollbar-track {
+    background: #111827; /* slate-900 */
+    border-radius: 10px;
+  }
+
+  .detections-scroll::-webkit-scrollbar-thumb {
+    background-color: #4b5563; /* gray-600 */
+    border-radius: 10px;
+  }
+
+  .detections-scroll::-webkit-scrollbar-thumb:hover {
+    background-color: #fbbf24; /* amber-400 */
+  }
+
+  /* Firefox */
+  .detections-scroll {
+    scrollbar-width: thin;
+    scrollbar-color: #4b5563 #111827;
+  }
+}
